Revision history for Files-Containing

{{$NEXT}}

0.0.16  2022-08-03T22:50:19+02:00
    - Fix using a Callable as a needle
    - Remove for phasers altogether.  The LAST phaser can not be called
      at the right time on account of files-containing returning a lazy
      Seq.

0.0.15  2022-07-31T22:19:34+02:00
    - Actually set $*IO only if needle is simple Callable
    - Add support for FIRST, NEXT and LAST phasers on simple Callables

0.0.14  2022-07-31T11:39:44+02:00
    - Set dynamic variable $*IO to indicate file being processed

0.0.13  2022-07-23T21:28:52+02:00
    - Also re-export the "has-word" subroutine

0.0.12  2022-07-19T16:07:19+02:00
    - Bump dependency on "Lines::Containing" to get :type capability

0.0.11  2022-07-18T16:45:18+02:00
    - Add :count-only named argument to just produce counts

0.0.10  2022-07-13T22:13:29+02:00
    - Add :sort named argument to sort files produced by paths
    - Also re-export "hyperize"

0.0.9  2022-07-10T15:17:15+02:00
    - No longer follow symlinked directories by default.
    - Bump dependency on "paths" to get :follow-symlinks capability
    - Add :follow-symlinks named argument to follow symlinked directories

0.0.8  2022-07-09T14:03:03+02:00
    - Re-export the "paths" and "lines-containing" subs for convenience
      and preventing any module version syncing issues

0.0.7  2022-06-26T16:39:51+02:00
    - Up dependency on Lines::Containing to get the new semantics
      of specification of a Callable as a needle

0.0.6  2022-06-26T14:32:40+02:00
    - Up dependency of "paths" to get single file support

0.0.5  2022-06-25T13:53:32+02:00
    - Add support for ":invert-match" named argument
    - Bump dependency on Lines::Containing to get :invert-match support

0.0.4  2022-06-23T12:09:45+02:00
    - Add support for ":max-count" named argument
    - Bump dependency on Lines::Containing to get :max-count support

0.0.3  2022-06-22T21:52:37+02:00
    - Fix warning on files that couldn't be slurped as text