@@ -1,120 +1,3 @@
-use hyperize:ver<0.0.3+>:auth<zef:lizmat>;
-use paths:ver<10.1+>:auth<zef:lizmat>;
-use Lines::Containing:ver<0.0.11+>:auth<zef:lizmat>;
-
-my sub is-simple-Callable($needle) {
-    Callable.ACCEPTS($needle) && !Regex.ACCEPTS($needle)
-}
-
-my proto sub files-containing(|) {*}
-my multi sub files-containing(
-  Any:D   $needle,
-          $root?,
-  List() :$extensions,
-         :$include-dot-files,
-         :$file is copy,
-         :$dir,
-         :$follow-symlinks,
-         :$sort,
-         *%_
-) {
-    without $file {
-        my @exts := $extensions // ();
-        my $ext  := @exts[0];
-
-        $file = $include-dot-files
-          ?? $ext
-            ?? @exts == 1
-              ?? *.ends-with($ext)
-              !! *.ends-with(any(@exts))
-            !! True
-          !! $ext
-            ?? @exts == 1
-              ?? { .ends-with($ext)       && !.starts-with(".") }
-              !! { .ends-with(any(@exts)) && !.starts-with(".") }
-            !! !*.starts-with(".")
-    }
-    my $seq := paths($root, :$file, :$dir, :$follow-symlinks);
-    files-containing(
-      $needle,
-      $sort
-        ?? Callable.ACCEPTS($sort)
-          ?? $seq.sort($sort)
-          !! $seq.sort
-        !! $seq,
-      |%_
-    )
-}
-my multi sub files-containing(
-  Any:D  $needle,
-         @files,
-        :ignorecase(:$i),
-        :ignoremark(:$m),
-        :$offset = 0,
-        :$files-only,
-        :$batch,
-        :$degree is copy,
-        :$max-count,
-        :$invert-match,
-        :$count-only,
-        :$type,
-) {
-    $degree = 1 if @files == 1;
-
-    # Handle a Callable needle in a thread-safe manner
-    if is-simple-Callable($needle) {
-        @files.&hyperize($batch, $degree).map: $files-only
-          ?? -> IO() $io {
-                 with (try $io.slurp(:enc<utf8-c8>)) -> $slurped {
-                     my $*IO := $io;
-                     $io if $needle($slurped)
-                 }
-             }
-          !! -> IO() $io {
-                 my $*IO := $io;
-                 with lines-containing(
-                   $io, $needle, :$i, :$m, :p, :$max-count,
-                   :$offset, :$invert-match, :$count-only, :$type,
-                 ) -> \result {
-                     if result.elems {
-                         $io => ($count-only ?? result !! result.Slip)
-                     }
-                 }
-             }
-    }
-
-    # Not a simple Callable as needle
-    else {
-        @files.&hyperize($batch, $degree).map: $files-only
-          ?? -> IO() $io {
-                 if (try $io.slurp(:enc<utf8-c8>)) -> $slurped {
-                     $io if $slurped.contains($needle, :$i, :$m)
-                 }
-             }
-          !! -> IO() $io {
-                 my $slurped := try $io.slurp(:enc<utf8-c8>);
-                 if $slurped && $slurped.contains($needle, :$i, :$m) {
-                     with lines-containing(
-                       $slurped, $needle, :$i, :$m, :p, :$max-count,
-                       :$offset, :$invert-match, :$count-only, :$type,
-                     ) -> \result {
-                         $io => ($count-only ?? result !! result.Slip)
-                           if result.elems;
-                     }
-                 }
-             }
-    }
-}
-
-my sub EXPORT() {
-    BEGIN Map.new:
-      '&paths'            => &paths,
-      '&lines-containing' => &lines-containing,
-      '&files-containing' => &files-containing,
-      '&has-word'         => &has-word,
-      '&hyperize'         => &hyperize,
-}
-
 =begin pod
 
 =head1 NAME
@@ -336,7 +219,7 @@ deal to me!
 
 =head1 COPYRIGHT AND LICENSE
 
-Copyright 2022 Elizabeth Mattijsen
+Copyright 2022, 2025 Elizabeth Mattijsen
 
 This library is free software; you can redistribute it and/or modify it under the Artistic License 2.0.
 
